Updated Current Weather Stats and Tables
Adds Temperature and Wind Speed Tables which
are filled with data from the API.

Also adds API data to Current Weather Stats page

--- a/WeatherPage.html
+++ b/WeatherPage.html
@@ -24,7 +24,7 @@
     <div id="tableDD" class="dropDownContent">
         <a href="TablePageT.html">Temperature</a>
         <a href="#">Humidity</a>
-        <a href="#">Wind Speed</a>
+        <a href="TablePageWS.html">Wind Speed</a>
         <a href="#">Wind Direction</a>
         <a href="#">Rain</a>
     </div>
@@ -56,5 +56,6 @@
     </div>
     <script src="WeatherScript.js"></script>
     <script src="jquery-3.5.1.min.js"></script>
+   
 </body>
     </html>
