--- a/TablePageT.html
+++ b/TablePageT.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="WeatherStyle.css" />
 </head>
-<body onload="tableInit('t')">
+<body onload="getTemperatureDataForTables()">
     <h1>Lubbock Weather</h1>
 
     <!---------------------- N a v b a r ---------------------->
@@ -24,13 +24,28 @@
     <div id="tableDD" class="dropDownContent">
         <a href="#">Temperature</a>
         <a href="#">Humidity</a>
-        <a href="#">Wind Speed</a>
+        <a href="TablePageWS.html">Wind Speed</a>
         <a href="#">Wind Direction</a>
         <a href="#">Rain</a>
     </div>
 
     <!------------ W e a t h e r   T a b l e   f o r   T e m p e r a t u r e ------------>
-    <div class="split leftPan">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            Test Data from API
+        </div>   <!--en dof panel-heading -->
+        <div class="panel-body">
+            <table class="blueTable" id="TemperatureTable">
+                <tr>
+                    <th>Temperature</th>
+                    <th>Humidity</th>
+                    <th>Time Captured</th>
+
+                </tr>   <!--end of table-row -->
+            </table>   <!--end of table -->
+        </div> <!--end of Panel-body -->
+    </div> <!--end of Panel -->
+    <!--<div class="split leftPan">
         <div class="centered">
             <p id="0"></p>
             <p id="1"></p>
@@ -61,7 +76,7 @@
             <p id="22"></p>
             <p id="23"></p>
         </div>
-    </div>
+    </div>-->
 
     <script src="WeatherScript.js"></script>
     <script src="jquery-3.5.1.min.js"></script>
