--- a/TablePageWS.html
+++ b/TablePageWS.html
@@ -25,9 +25,9 @@
     </div>
 
     <div id="tableDD" class="dropDownContent">
-        <a href="#">Temperature</a>
+        <a href="TablePageT.html">Temperature</a>
         <a href="#">Humidity</a>
-        <a href="TablePageWS.html">Wind Speed</a>
+        <a href="#">Wind Speed</a>
         <a href="#">Wind Direction</a>
         <a href="#">Rain</a>
     </div>
