Added Temperature Chart
Chart.js used to create charts

--- a/TablePageT.html
+++ b/TablePageT.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="graphDD" class="dropDownContent">
-        <a href="#">Temperature</a>
+        <a href="ChartPageT">Temperature</a>
         <a href="#">Humidity</a>
         <a href="#">Wind Speed</a>
         <a href="#">Wind Direction</a>
